--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ jobs:
     - name: Gradle Wrapper Validation
       uses: gradle/wrapper-validation-action@v1
     - name: Setup Java
-      uses: olafurpg/setup-scala@v6
+      uses: actions/setup-java@v1
       with:
-        java-version: openjdk@1.8
+        java-version: 1.8
     - name: Gradle Build
       uses: eskatos/gradle-command-action@v1
       with:
