--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,7 @@ jobs:
     - name: Gradle Build
       uses: eskatos/gradle-command-action@v1
       with:
+        gradle-version: wrapper
         arguments: build
         dependencies-cache-enabled: false
         configuration-cache-enabled: false
