--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.1
-	yarn_mappings=1.16.1+build.21
-	loader_version=0.9.0+build.204
+	minecraft_version=1.18.1
+	yarn_mappings=1.18.1+build.17
+	loader_version=0.12.8
 
 # Mod Properties
 	mod_version = 1.0.0
